# orm

./: .gitignore  Cargo.toml
examples/: blog_app.rs  complete_crud_demo.rs  migrations_example.rs  query_builder_demo.rs  transactions_example.rs  user_model.rs
src/: error.rs  lib.rs  utils.rs
src/backend/: mod.rs  mysql.rs  sqlite.rs
src/connection/: mod.rs  pool.rs
src/migration/: mod.rs
src/model/: crud.rs  mod.rs  traits.rs
src/query/: builder.rs  executor.rs  mod.rs
src/schema/: column.rs  introspect.rs  mod.rs  table.rs
src/transaction/: mod.rs
tests/: crud_test.rs  transaction_test.rs
