[package]
name = "orm"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = {version= "0.4.42", features = ["serde"]}
serde = { version= "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = {version= "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "mysql"] }
thiserror = "2.0.17"
tokio = {version= "1.48.0", features = ["full"]}
uuid = {version= "1.18.1", features = ["v4", "serde"]}

[dev-dependencies]
tokio-test = "0.4.4"